<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#5BAC64"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="416dp"
        android:layout_height="380dp"
        android:contentDescription="@string/todo"
        android:scaleType="centerCrop"
        android:textAlignment="viewStart"
        app:barrierAllowsGoneWidgets="false"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/bookgreen"
        tools:ignore="ContentDescription" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login"
        android:layout_width="207dp"
        android:layout_height="72dp"
        android:layout_marginBottom="248dp"
        android:background="@drawable/sss"
        android:text="@string/login_for_admin"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView"
        app:layout_constraintVertical_bias="0.866" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="522dp"
        android:background="@drawable/rounded_corner_view"
        android:fontFamily="@font/ubuntu_medium"
        android:gravity="center_horizontal|top"
        android:includeFontPadding="true"
        android:paddingTop="20dp"
        android:text="Library Management"
        android:textColor="#DC471805"
        android:textColorHighlight="#000000"
        android:textSize="27sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button2"
        android:layout_width="207dp"
        android:layout_height="72dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/sss"
        android:elevation="10dp"
        android:fontFamily="@font/ubuntu_medium"
        android:shadowDx="10"
        android:text="@string/login_for_user"
        android:textColor="@color/white"
        android:textColorHighlight="#511E1E"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login"
        app:layout_constraintVertical_bias="0.847" />

</androidx.constraintlayout.widget.ConstraintLayout>